Changed queue structure